--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/Alanaresin.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/Alana-resin.jpg" alt="" /></a>
 										<header>
 											<h3>Jewelry With A Smile</h3>
 										</header>
