--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/mandysroyalty.png" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/mandysroyalty.png" alt="Mandy's Royalty image" /></a>
 										<header>
 											<h3>Mandy's Royalty</h3>
 										</header>
@@ -64,7 +64,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/Alana-resin.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/Alana-resin.jpg" alt="Alana resin" /></a>
 										<header>
 											<h3>Jewelry With A Smile</h3>
 										</header>
@@ -76,7 +76,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="portfolio image" /></a>
 										<header>
 											<h3>Portfolio Page</h3>
 										</header>
