--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/Alana-resin.jpg" alt="Alana resin" /></a>
+										<a href="#" class="image featured"><img src="images/Alana-resin.jpg" height="233" alt="Alana resin" /></a>
 										<header>
 											<h3>Jewelry With A Smile</h3>
 										</header>
@@ -78,9 +78,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="portfolio image" /></a>
 										<header>
-											<h3>Portfolio Page</h3>
+											<h3>Who's Next?</h3>
 										</header>
-										<p>A work portfolio showcasing skills and performance.</p>
+										<p>Will my next project be for you? </p>
 									</section>
 
 							</div>
