--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 								<!-- Feature -->
 									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="portfolio image" /></a>
+										<a href="#" class="image featured"><img src="images/jon-tyson-hhq1Lxtuwd8-unsplash.jpg" height="233" alt="portfolio image" /></a>
 										<header>
 											<h3>Who's Next?</h3>
 										</header>
