--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 										 <ul class="icons">
 											<li class="icon fa-arrow-alt-circle-right">
 											<strong><span>Jump to:</span></strong></a>
-												<a href="about.html">Who</a> || <a href="location.html">Where</a> || <a href="hiremenow.html">When</a>
+												<a href="about.html">Who</a> || <a href="location.html">Where</a>
 																												
 											</li>	
 										</ul>
