--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
 							</nav>
 							
 						<div id="intro" align="left" width="100%">
-							<p></p>Hi, I'm Mandy. Once upon a time, I had a head full of royal history. How could I get it 
-							out of my head and into the world to share? 
+							<p></p>Hi, I'm Mandy. Once upon a time, I had a head full of royal history. But how could I get it 
+							out into the world to share? 
 							<p></p>
 							Make a website, of course. 
 							<p></p>
