--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 							I've been incredibly fortunate. My work caught the attention of news outlets and I had the opportunity to talk about royal history in 
 							British and North American media. So yes, the marriage between code and content creation has been magical.
 							<p></p>
-							Now I am available to help create code and content for you! Download <a href="https://drive.google.com/file/d/1ebeufQvGBH6mcJvtt-e77ESugEMpqhhW/view?usp=sharing" target=_"blank">my resume</a> for more.
+							Now I am available to help create code and content for you! Download <a href="#" target=_"blank">my resume</a> for more.
 						
 						</div>
 						<div> 
